fix align bug

--- a/Css/VideoPage.css
+++ b/Css/VideoPage.css
@@ -21,6 +21,7 @@ img{
 
     width: 1440px;
     justify-content: center;
+    margin: 0px auto;
 }
 
 .video-container{
